# prompt-engineer

./: .gitignore  AUTO_START_SETUP.md  EDGE_SETUP.md  PROJECT_DESCRIPTION.md  PROJECT_PROGRESS.md  README.md  com.promptoptimizer.backend.plist  create_icons.py  env.template  pyproject.toml  setup_auto_start.sh  start_backend.sh  start_server.py
app/: __init__.py  clients.py  main.py  models.py  optimizer.py
extension/: README.md  background.js  content.js  manifest.json  popup.html
tests/: test_extension.py  test_optimizer.py
